--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   publish = "dist"
   functions = "netlify/functions"
 
+[build.environment]
+  SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
+
 [dev]
   command = "npm run dev"
   port = 5173
