feat: add Dashboard, chat persistence, and shared architecture
Implement Phase 3 Intelligent Experience completion and Phase 4 foundation:

- Add new Dashboard page with profile overview and navigation
- Create centralized shared services (astro-api.ts, gemini.ts) for API integrations
- Implement chat persistence with Firestore nested sub-collections
- Add collapsible conversation sidebar with chat history management
- Support D9 (Navamsa) chart type selection and display
- Add OnboardingModal component for in-context profile updates
- Implement chart download functionality with html2canvas
- Create custom hooks: useUserProfile, useKundali, useSubscription
- Refactor Synthesis page with improved 3D visualization and UI polish
- Add ARCHITECTURE.md with key principles and guidelines
- Update IMPLEMENTATION_PLAN.md with 8-week competitive parity roadmap
- Improve 3D CelestialEngine with better orbital mechanics and textures
- Add ReactMarkdown support for AI responses with custom styling
- Handle guest and logged-in user data flows seamlessly
- Add unknown birth time handling in onboarding

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,18 +6,14 @@
 [build.environment]
   SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
-[dev]
-  command = "npm run dev"
-  port = 5173
-  targetPort = 5173
-  autoLaunch = false
-
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
 
+# SPA fallback for production
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
