fix(auth): configure Firebase Auth reverse proxy for production
Firebase Auth redirect method requires the /__/auth/* endpoint which is only
available on Firebase Hosting. Production deployments on Netlify need a reverse
proxy to access these endpoints. Development uses popup method which works
without special configuration.

Added specific error messages for common popup-related failures to improve
user experience.

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,13 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
+# Firebase Auth reverse proxy - enables signInWithRedirect on Netlify
+[[redirects]]
+  from = "/__/auth/*"
+  to = "https://astro-you.firebaseapp.com/__/auth/:splat"
+  status = 200
+  force = true
+
 # SPA fallback for production
 [[redirects]]
   from = "/*"
