feat(astrology): add compatibility analysis with Guna Milan integration
- Introduce new compatibility analysis endpoint and page for relationship matching
- Add framer-motion for smooth page transitions and animations
- Refactor dashboard with Header component and real-time prediction fetching
- Simplify celestial engine by removing sacred geometry for cleaner UI
- Add ForecastData types for high-precision daily horoscope structure
- Implement narrative text support for horoscope API responses
- Refactor landing page with modular Header/Footer components

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@types/three": "^0.182.0",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
+    "framer-motion": "^12.24.10",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "razorpay": "^2.9.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.11.0",
+    "react-router-dom": "^7.12.0",
     "remark-gfm": "^4.0.1",
     "three": "^0.182.0"
   },
@@ -42,6 +43,6 @@
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.52.0",
-    "vite": "^7.3.0"
+    "vite": "^7.3.1"
   }
 }
